# ADM_HW3

./: .gitignore  README.md  constants.py  create_first_index.py  create_second_index.py  create_vocabulary.py  custom_metrics_utils.py  download_anime.py  download_top_charts.py  extract_anime_urls.py  extract_search_info.py  first_index_utils.py  main.ipynb  parse_pages.py  pyproject.toml  second_index_utils.py  utils.py
